# yahpo_gym

./: .gitignore  README.md
.github/workflows/: docs.yml  unittests_gym_py.yml
docker/: Dockerfile
docs/: examples.html  extending.html  frequently_asked.html  genindex.html  getting_started.html  index.html  modules.html  objects.inv  py-modindex.html  scenarios.html  search.html  searchindex.js  yahpo_gym.benchmarks.html  yahpo_gym.html
docs/_sources/: examples.rst.txt  extending.rst.txt  frequently_asked.rst.txt  getting_started.rst.txt  index.rst.txt  modules.rst.txt  scenarios.rst.txt  yahpo_gym.rst.txt
docs/_static/: instances.csv  scenario_stats.csv
docs/main/: .buildinfo  index.html  objects.inv  search.html  searchindex.js  yahpo_gym.html
docs/main/_sources/: yahpo_gym.benchmarks.rst.txt
experiments/: analyze.R  analyze_mf.R  analyze_mo.R  batchtools.conf.R  dehb.py  dehb_wrapper.py  hb_bohb.py  hb_bohb_wrapper.py  helpers.R  optuna.py  optuna_wrapper.py  random.py  random_wrapper.py  run.R  run_mf.R  run_mo.R  smac.py  smac_wrapper.py
experiments/attic/: mobl.py
scripts/: yahpo.py
yahpo_gym/: .gitignore  CHANGELOG  LICENSE  README.md  pyproject.toml  setup.py
yahpo_gym/docs/source/: conf.py  examples.rst  extending.rst  frequently_asked.rst  getting_started.rst  index.rst  scenarios.rst  yahpo_gym.benchmarks.rst  yahpo_gym.rst
yahpo_gym/docs/source/_static/: instances.csv  scenario_stats.csv
yahpo_gym/experiments/: dehb.py  hb_bohb.py  optuna.py  smac.py
yahpo_gym/experiments/attic/: dehb.py
yahpo_gym/notebooks/: NB.ipynb  code_sample.ipynb  collect_global_min_max_statistics.ipynb  fit_surrogate.ipynb  get_metadata.ipynb  transfer_example.ipynb  tune_surrogates.ipynb  tuning_hpandster_on_yahpo.ipynb  using_yahpo_gym.ipynb
yahpo_gym/scripts/: setup_yahpo.py
yahpo_gym/tests/: test_benchmark_set.py  test_config.py  test_get_suites.py  test_get_tasks.py  test_objective_timed.py
yahpo_gym/yahpo_gym/: __init__.py  benchmark_instance.py  benchmark_set.py  configuration.py  get_suite.py  get_tasks.py  local_config.py
yahpo_gym/yahpo_gym/benchmarks/: __init__.py  download_checks.py  fair.py  fcnet.py  iaml.py  lcbench.py  nasbench_301.py  nb301.py  pd1.py  rbv2.py  taskset.py
yahpo_gym/yahpo_gym/scripts/: setup_yahpo.py
yahpo_gym_r/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md
yahpo_gym_r/R/: BenchmarkSet.R  Objective.R  get_suites.R  get_tasks.R  onLoad.R  utils.R  zzz.R
yahpo_gym_r/attic/: code_sample.R  prep_for_ela.R
yahpo_gym_r/man/: BenchmarkSet.Rd  get_suites.Rd  get_tasks.Rd  init_local_config.Rd  list_benchmarks.Rd  preproc_xs.Rd  yahpo_gym-package.Rd  yahpogym-package.Rd
yahpo_gym_r/tests/: testthat.R
yahpo_gym_r/tests/testthat/: test_benchmarks.R  test_benchmarkset.R  test_objective.R  test_utils.R
yahpo_gym_r/vignettes/: getting_started.Rmd
yahpo_train/: .gitignore  CHANGELOG  README.md  pyproject.toml  setup.py
yahpo_train/attic/: old_cont_scalers.py  tabular_transformer.py  yeoh_johnson.py
yahpo_train/attic/tests/: test_cont_normalization.py  test_cont_scalers.py  test_onnx.py
yahpo_train/notebooks/: fit_resnet.py  fit_surrogates.py  get_best_params.py  learning_curves.ipynb  tune_ff.py  tune_resnet.py
yahpo_train/notebooks/attic/: fit_resnet.py  fit_surrogate.ipynb  fit_surrogates.py  tune_ff.py  tune_resnet.py
yahpo_train/tests/: test_cont_normalization.py  test_cont_scalers.py  test_onnx.py
yahpo_train/yahpo_train/: __init__.py  cont_embeddings.py  cont_normalization.py  cont_scalers.py  embed_helpers.py  helpers.py  learner.py  losses.py  metrics.py  model.py  models.py  models_ensemble.py  models_utils.py
yahpo_train/yahpo_train/notebooks/: fit_surrogate.ipynb  fit_surrogates.ipynb  fit_surrogates.py  fit_surrogtates.py  test_noisy.ipynb
