[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yahpo-gym"
dynamic = ["version"]
description = "Inference module for the YAHPO Gym"
readme = "README.md"
authors = [
    { name = "Florian Pfisterer" },
    { name = "Lennart Schneider" },
]
keywords = [
    "module",
    "inference",
    "yahpo",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "onnxruntime>=1.10.0", 
    "pyyaml", 
    "configspace<=0.6.1", 
    "pandas"
]

[project.urls]
Homepage = "https://github.com/slds-lmu/yahpo_gym"


[tool.ruff]
line-length = 200
include = ["pyproject.toml", "yahpo_gym/*.py"]
indent-width = 4
target-version = "py310"
fix = true
unsafe-fixes = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true